--- a/formulario.html
+++ b/formulario.html
@@ -35,8 +35,8 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <form name="contact" method="POST" data-netlify="true">
         <h2>Contacto</h2>
-        <input type="text" name="Nombre" placeholder="Nombre..." required>
-        <input type="text" name="Nombre" placeholder="Correo..." required>
+        <input type="text" name="name" placeholder="Nombre..." required>
+        <input type="email" name="email" placeholder="Correo..." required>
         <textarea name="mensaje" placeholder="Escriba su mensaje:" required></textarea>
         <input type="submit" value="Enviar" id="boton">
 
