--- a/formulario.html
+++ b/formulario.html
@@ -1,73 +1,43 @@
+<!DOCTYPE html>
+ <html> 
+<head>
+          <title>Formulario</title>
+<meta charset="UTF-8">
+    <link rel="stylesheet" href="css/form.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Red+Hat+Text:400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/fontello.css">
+    <link rel="stylesheet" href="css/form.css">
+</head>
+ <body>
+<header id="header">
+    <nav class="menu">
+     <div class="logo-box">
+       <h1><a href="index.html">Change</a></h1>
+       <span class="btn-menu"><i class="fas fa-bars"></i></span>
+     </div>
+     
+     <div class="list-container">
+        <ul class="lists">
+            <li><a href="index.html" class="active">Inicio</a></li>
+            <li><a href="#ambientes">Ambientes</a></li>
+            <li><a href="#sobre_nosotros">Sobre Nosotros</a></li>
+            <li><a href="formulario.html">Contacto</a></li>
+        </ul>
+     </div>
+    </nav>
+    </header>
+    <form name="contact" method="POST" data-netlify="true">
+        <h2>Contacto</h2>
+        <input type="text" name="name" placeholder="Nombre..." required>
+        <input type="email" name="email" placeholder="Correo..." required>
+        <textarea name="mensaje" placeholder="Escriba su mensaje:" required></textarea>
+        <input type="submit" value="Enviar" id="boton">
 
-body{
-	background-image: url(fondo.jpg);
-	background-size: 100vw 100vh;
-	background-attachment: fixed ;
-	margin: 0;
-	font-family: 'Otomanopee One', sans-serif;
-}
-
-form{
-	width: 700px;
-	margin: auto;
-	background: rgba(0,0,0,0.2);
-	padding: 70px 70px;
-	box-sizing: border-box;
-	margin-top:250px;
-	border-radius: 100px;
-}
-p{
-	font-size: 200%;
-	font-family: cursive;
-	color: black;
-	text-align: center;
-	margin:20px;
-	padding: 50px;
-}
-h2{
-	color: #535c68;
-	text-align: center;
-	margin: 0;
-	font-size: 70px;
-	margin-bottom: 20px;
-}
-
-input,textarea{
-	font-family: 'Otomanopee One', sans-serif;
-	width: 100%;
-	margin-bottom: 20px;
-	padding: 7px;
-	box-sizing: border-box;
-	font-size: 17px;
-	border: none;
-}
-textarea{
-	background: rgba(0,0,0,0.5);
-	border-radius: 30px;
-	min-height: 100px;
-	max-height: 200px;
-	max-width: 100%;
-	color: #a4b0be;
-}
-input{
-	background: rgba(0,0,0,0.5);
-	color: #a4b0be;
-}
-#boton{
-	background: rgba(0,0,0,0.5);
-	font-size: 20px;
-	color: white;
-	padding: 30px;
-	border-radius: 20px;
-
-}
-#boton:hover{
-	cursor: pointer;
-	background: rgba(0,0,0,0.8);
-}
-
-@media (max-width: 700px){
-	form{
-		width: 100%;
-	}
-}
+    </form>
+<!-- Scripts -->
+<script src="https://kit.fontawesome.com/35db202371.js"></script>
+<script src="js/app.js"></script>
+ </body> 
+</html>
