--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
      <div class="welcome">
        <h1>Adaptándonos al Mundo</h1>
        <hr>
-       <p>TEAconsejamos Sitio Web</p>
+       <p>TEAconsejamos</p>
        <button id="abajo">Comenzar</button>
      </div>       
     </div>
@@ -130,7 +130,7 @@
  <!-- Footer -->
  <footer id="contactos" class="footer">
         <div class="container">
-            <p class="copy">ProyectoGGz &copy;2021| Todos los derechos reservados</p>
+            <p class="copy">Change &copy;2021| Todos los derechos reservados</p>
             <div class="sociales">
                 <a class="icon-facebook" href="#" ></a>
                 <a class="icon-instagram" href="#" ></a>
