--- a/formulario.html
+++ b/formulario.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
- <html> 
+<html lang="es">
 <head>
-          <title>Formulario</title>
-<meta charset="UTF-8">
+    <title>TEAconsejamos | Inicio</title>
+    <meta charset="UTF-8">
+     <meta name="viewport" content="width-device-width, user-scalable-no, initial-scale-1, maximum-scale-1, minimum-scale-1">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">  
     <link rel="stylesheet" href="css/form.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Red+Hat+Text:400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/fontello.css">
-    <link rel="stylesheet" href="css/form.css">
+    <script src="main.js"></script>
+    <script src="js/app.js"></script>
+    <script src="https://kit.fontawesome.com/35db202371.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 </head>
- <body>
-<header id="header">
-    <nav class="menu">
-     <div class="logo-box">
-       <h1><a href="index.html">Change</a></h1>
-       <span class="btn-menu"><i class="fas fa-bars"></i></span>
-     </div>
-     
-     <div class="list-container">
-        <ul class="lists">
-            <li><a href="index.html" class="active">Inicio</a></li>
-            <li><a href="#ambientes">Ambientes</a></li>
-            <li><a href="#sobre_nosotros">Sobre Nosotros</a></li>
-            <li><a href="formulario.html">Contacto</a></li>
+<body>
+
+    <!-- Menu de Navegacion -->
+    <header id="header">
+        <nav>
+    <div class="container">
+        <input id="responsive-menu" type="checkbox">
+        <label for="responsive-menu">TeaConsejamos <span id="menu-icon"></span></label>
+        <div id="overlay"></div>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="">Ambientes</a></li>
+            <li><a href="">Nosotros</a></li>
+            <li><a href="">Contacto</a></li>
         </ul>
-     </div>
-    </nav>
+    </div>
+</nav>
     </header>
+
     <form name="contact" method="POST" data-netlify="true">
         <h2>Contacto</h2>
         <input type="text" name="name" placeholder="Nombre..." required>
@@ -35,9 +41,24 @@
         <textarea name="mensaje" placeholder="Escriba su mensaje:" required></textarea>
         <input type="submit" value="Enviar" id="boton">
 
+
     </form>
-<!-- Scripts -->
-<script src="https://kit.fontawesome.com/35db202371.js"></script>
-<script src="js/app.js"></script>
- </body> 
+
+    <div class="text-form">
+        <p>Puedes contactarte con nosotros en caso de tener cualquier tipo de duda, inquietud o sugerencia, y intentaremos contestar a la brevedad</p>
+    </div>
+ <!-- Footer -->
+ <div class="footer-inicio">
+        <footer>
+            <div class="social">
+                <a href="#"><i class="icon ion-social-instagram"></i></a>
+                <a href="#"><i class="icon ion-social-youtube"></i></a>
+                <a href="#"><i class="icon ion-social-twitter"></i></a>
+                <a href="#"><i class="icon ion-social-facebook"></i></a>
+            </div>
+        </footer>
+    </div>
+
+  
+</body>
 </html>
