--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <h1>Sobre nosotros</h1>
         <hr><br><br>
       <p>Somos un grupo de amigos que se nos ocurrio la idea crear una pagina web que sirva de ayuda para las personas con autismo.</p>
-      <p>El objetivo de pagina es que esas personas puedan escuchar el ambiente donde les interesa ir, ademas queremos agregar una funcion que les permita ver el entorno de esos lugares y así poder prepararse con antelacion.</p><br>
+      <p>El objetivo de la pagina es que esas personas puedan ver y escuchar el ambiente donde les interesa ir, así poder prepararse con antelacion.</p><br>
       <div class="about-more"><button onclick="location.href='nosotros.html'">Leer mas</button></div>
 
     </div>
