--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div class="card-picto">
           <div class="card-img"> 
-            <a href="https://www.youtube.com/watch?v=K7gR6128_xA"><img src="img/relax.jpg" alt=""></a>
+            <a href=""><img src="img/relax.jpg" alt=""></a>
         </div>
           <div class="picto-text">
           <p>Aqui encontraras videos y demas para relajarte y divertirte</p>
