--- a/ambientes.html
+++ b/ambientes.html
@@ -244,10 +244,10 @@
     <script type="text/javascript">
     $('#lightbox').hide();
     $('#abrir').click(function(){
-      $('#lightbox').show('slow');
+      $('#lightbox').show('fast');
     });
     $('#cerrar').click(function(){
-      $('#lightbox').hide('slow');
+      $('#lightbox').hide('fast');
     });
     </script>
 
