--- a/ambientes.html
+++ b/ambientes.html
@@ -19,7 +19,7 @@
     <div class="topnav" id="myTopnav">
       <a href="ambientes.html" class="active">Ambientes</a>
       <a href="index.html">Inicio</a>
-      <a href="formulario.php">Contacto</a>
+      <a href="contacto/formulario.php">Contacto</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
