--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div class="topnav" id="myTopnav">
     <a href="index.html" class="active">Inicio</a>
-    <a href="formulario.php">Contacto</a>
+    <a href="contacto/formulario.php">Contacto</a>
     <a href="ambientes.html">Ambientes</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
